try to fix map on view sighting page on iphone

--- a/birds/static/birds/style.css
+++ b/birds/static/birds/style.css
@@ -422,9 +422,9 @@ END VIEW SIGHTING PAGE
 	width: 100%;
 }
 
-.mdl-card {
+/*.mdl-card {
 	min-height: auto;
-}
+}*/
 
 .image_inspect_dialog .ui-dialog-titlebar {
 	display: none;
